--- a/style.css
+++ b/style.css
@@ -2,4 +2,35 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
+}
+header {
+  text-align: center;
+}
+img {
+align-items: center;
+}
+a.nav {
+padding-left: 10px;
+padding-right: 10px;
+background-color: gray;
+}
+figure#img {
+  align: center;
+  width: 900px;
+}
+
+figcaption {
+  text-align: center;
+  font-size: smaller;
+}
+
+p#featured-property {
+width: 800px;
+}
+div {
+  float: left;
+  background-color: red;
+  text-align: center;
+  min-width: 25%;
 }
